Version 3.0.1.0
===============

  * Locale was introduced in lieu of language
    See: https://github.com/openlabs/nereid/issues/65
  * URLs do not require <language> placeholder anymore
  * Sites can be without locales as well

Version 2.6.0.2
===============

  * Update sitemap to use ActiveRecord pattern.
  * Remove raw SQL transactions from SitemapIndex.

Version 2.4.0.6
===============

  * Changed the way HTTP methods are exposed in a URL Rule from selection
    field to boolean field for each HTTP method (Migration included schema
    change).
  * Fixed issue with static files where file was unnecssarily encoded into
    base64 (the behavior changed in Trytond 2.0)
  * Allow attachments to be send with the render_email function and also
    update mimetype to properly display emails on Microsoft Outlook and older
    email clients.

Version 2.4.0.5
===============

  * Add display_name function field which can be used in both a b2c and b2b
    context to display the name of the current user
  * Add the name of the user who uploaded the attachment to ir.attachment

Version 0.3
===========

 * User model is now nereid.user. Previously user records were stored in 
   party.address. Now it _inherits from party and is stored in a separate
   table

 * All tests must inherit from nereid.testing.TestCase as it implements an
   automatic creation of database and dropping of it after each TestCase is
   executed.