@@ -19,6 +19,7 @@ from test_currency import TestCurrency
 from test_routing import TestRouting
 from test_translation import TestTranslation
 from test_country import TestCountry
+from test_website import TestWebsite
 
 
 class TestNereid(unittest.TestCase):
@@ -67,6 +68,9 @@ def suite():
     )
     test_suite.addTests(
         unittest.TestLoader().loadTestsFromTestCase(TestCountry)
+    )
+    test_suite.addTests(
+        unittest.TestLoader().loadTestsFromTestCase(TestWebsite)
     )
     return test_suite
 
