@@ -1,3 +1,5 @@
+  * The method type of user_status() has been changed to POST 
+
 Version 3.0.1.0
 ===============
 
